Commented out reference to non-existant favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Rapid Web contributes to the open source community and creates several open source projects to help web developers in the industry.">
     <meta name="author" content="Jordan Hall">
-    <link rel="icon" href="../../favicon.ico">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
     <title>Open Source projects from Rapid Web Ltd.</title>
 
