--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             At Rapid Web, we actively contribute to the open source community. Take a look at <a href="https://github.com/rapidwebltd">our GitHub page</a>.
             <br> For more about our company and our other work, head over to <a href="http://www.rapidweb.biz/">our website</a>.
         </p>
+        <p>Here's an article we've written regarding open source software:</p>
+        <ul>
+            <li><a href="http://www.rapidweb.biz/news/5-reasons-open-source-software-is-good-for-your-business-52062472/">Five reasons open source software is good for your business</a></li>
+        </ul>
       </div>
 
     </div><!-- /.container -->
