Made all links open in new tabs

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <img src="assets/images/rapid-web-logo.jpg" alt="Rapid Web logo" />
         <h1>We &#x2665; Open Source</h1>
         <p class="lead">
-            At Rapid Web, we actively contribute to the open source community. Take a look at <a href="https://github.com/rapidwebltd">our GitHub page</a>.
-            <br> For more about our company and our other work, head over to <a href="http://www.rapidweb.biz/">our website</a>.
+            At Rapid Web, we actively contribute to the open source community. Take a look at <a target="_blank" href="https://github.com/rapidwebltd">our GitHub page</a>.
+            <br> For more about our company and our other work, head over to <a target="_blank" href="http://www.rapidweb.biz/">our website</a>.
         </p>
         <p>Here's an article we've written regarding open source software:</p>
         <ul>
-            <li><a href="http://www.rapidweb.biz/news/5-reasons-open-source-software-is-good-for-your-business-52062472/">Five reasons open source software is good for your business</a></li>
+            <li><a target="_blank" href="http://www.rapidweb.biz/news/5-reasons-open-source-software-is-good-for-your-business-52062472/">Five reasons open source software is good for your business</a></li>
         </ul>
       </div>
 
