Fixed broken link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="bg black">
       <div class="container">
         <div class="row">
-          <div class="text-center"><img src="assets/images/logo.svg" alt="Rapid Web" class="logo" width="250"> </div>
+          <div class="text-center"><img src="./assets/images/logo.svg" alt="Rapid Web" class="logo" width="250"> </div>
           
           <h1 class="lead text-center">We <span class="glyphicon glyphicon-heart"></span> Open Source</h1>
           <p class="text-center"><span href="#" class="btn btn-default btn-lg btn-ghost btn-projects">Our Projects</span> <a target="_blank" href="//github.com/orgs/rapidwebltd/" class="btn btn-default btn-lg btn-ghost">GitHub Page</a></p>
