--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <h2 class="project-title">Our Efforts</h2>
         <div class="row">
           <div class="col-xs-9 col-sm-6">
-            <p class="text-justify">We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
+            <p class=">We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
 
-            <p class="text-justify">This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an in-depth description of each project featured.</p>
+            <p class=">This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an in-depth description of each project featured.</p>
 
             <p class="text-center"><a target="_blank" href="http://www.rapidweb.biz/news/5-reasons-open-source-software-is-good-for-your-business-52062472/" class="btn btn-default btn-lg btn-ghost">Read Blog Post</a></p>
           </div>
@@ -56,7 +56,7 @@
               </video>
             </p>
           </div>
-          <div class="col-sm-6 text-justify">
+          <div class="col-sm-6">
             <p>A WordPress plugin that allows a user to deactivate their own user account from within the WordPress login area, or via the shortcode.</p>
 
             <p>To create a front-end page, that immediately deactivates the currently logged in user's account, use the following shortcode. This can be useful when developing a custom front-end.</p>
@@ -76,7 +76,7 @@
           <div class="col-sm-6 col-sm-push-6">
             <p><img src="assets/images/intent-social-icons.png" alt="Direct Social Buttons preview" class="img-responsive"/></p>
           </div>
-          <div class="col-sm-6 col-sm-pull-6 text-justify">
+          <div class="col-sm-6 col-sm-pull-6">
             <p>A pure HTML &amp; CSS implementation for allowing users to interact with social networks from your website without any need of loading in heavy JavaScript-based widgets. It provides a choice of many styles to aim to suite your website.
             </p>
 
@@ -106,7 +106,7 @@
               </video>
             </p>
           </div>
-          <div class="col-sm-6 text-justify">
+          <div class="col-sm-6">
             <p>A shell script designed to identify any backup files present in a git repository, remove them from the repository (via git rm) and to commit and push the changes. It works by identifying backup files based on their filenames ending with an underscore _ following by a string that represents a date.</p>
 
             <p>The backup script currently checks over the following files: </p>
