Updated blog post link

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <h2 class="project-title">Our Efforts</h2>
         <div class="row">
           <div class="col-xs-9 col-sm-6">
-            <p class=">We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
+            <p>We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
 
-            <p class=">This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an in-depth description of each project featured.</p>
+            <p>This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an in-depth description of each project featured.</p>
 
-            <p class="text-center"><a target="_blank" href="http://www.rapidweb.biz/news/5-reasons-open-source-software-is-good-for-your-business-52062472/" class="btn btn-default btn-lg btn-ghost">Read Blog Post</a></p>
+            <p class="text-center"><a target="_blank" href="https://www.rapidweb.biz/news/rapid-webs-open-source-contributions-2016-2017-18043159/" class="btn btn-default btn-lg btn-ghost">Read Blog Post</a></p>
           </div>
           <div class="col-xs-3 col-sm-4 col-sm-offset-2"><p><img src="assets/images/Open-Source-Logo.png" class="img-responsive" alt="Open Source Logo"></p></div>
         </div>
@@ -129,7 +129,7 @@
         <h1 class="text-center">Looking for more Open Source goodness?</h1>
         <br>
         <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-default btn-lg btn-ghost">View More on GitHub</a></p>
-        <p class="text-center">Brought to you by <a target="_blank" href="http://rapidweb.biz" class="footer-link">Rapid Web</a></p>
+        <p class="text-center">Brought to you by <a target="_blank" href="https://rapidweb.biz" class="footer-link">Rapid Web</a></p>
       </div>
     </footer>
     <script type="text/javascript">
