--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Open Source projects from Rapid Web Ltd</title>
-    <meta name="description" content="Rapid Web have made strides to build a healthy Open Source ecosystem using GitHub in order to share plugins, libraries and even knowledge through the use of GitHub platform." />
-    <meta name="keywords" content="Open Source, Rapid Web, Open Web, Open Source Wordpress Plugins, Open Web Software, Free Web Software, Free Open Source Software" />
-    <meta name="author" content="Rapid Web Ltd">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="css/style.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Open Source projects from Rapid Web Ltd</title>
+  <meta name="description" content="Rapid Web have made strides to build a healthy Open Source ecosystem using GitHub in order to share plugins, libraries and even knowledge through the use of GitHub platform." />
+  <meta name="keywords" content="Open Source, Rapid Web, Open Web, Open Source Wordpress Plugins, Open Web Software, Free Web Software, Free Open Source Software" />
+  <meta name="author" content="Rapid Web Ltd">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -21,9 +21,9 @@
   <body>
     <div class="bg black">
       <div class="container">
-          <div class="text-center"><img src="./assets/images/logo.svg" alt="Rapid Web" class="logo" width="250"> </div>
-          <h1 class="lead text-center">We <span class="glyphicon glyphicon-heart"></span> Open Source</h1>
-          <p class="text-center"><span href="#" class="btn btn-default btn-lg btn-ghost btn-projects">Our Projects</span> <a target="_blank" href="//github.com/orgs/rapidwebltd/" class="btn btn-default btn-lg btn-ghost">GitHub Page</a></p>
+        <div class="text-center"><img src="./assets/images/logo.svg" alt="Rapid Web" class="logo" width="250"> </div>
+        <h1 class="lead text-center">We <span class="fa fa-heart"></span> Open Source</h1>
+        <p class="text-center"><span href="#" class="btn btn-default btn-lg btn-ghost btn-projects">Our Projects</span> <a target="_blank" href="//github.com/orgs/rapidwebltd/" class="btn btn-default btn-lg btn-ghost">GitHub Page</a></p>
       </div>
     </div>
 
@@ -31,104 +31,27 @@
       <div class="container">
         <h2 class="project-title">Our Efforts</h2>
         <div class="row">
-          <div class="col-xs-9 col-sm-6">
+          <div class="col-9 col-sm-6">
             <p>We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
 
             <p>This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an in-depth description of each project featured.</p>
 
-            <p class="text-center"><a target="_blank" href="https://www.rapidweb.biz/news/rapid-webs-open-source-contributions-2016-2017-18043159/" class="btn btn-default btn-lg btn-ghost">Read Blog Post</a></p>
+            <p class="text-center"><a target="_blank" href="https://www.rapidweb.biz/news/rapid-webs-open-source-contributions-2016-2017-18043159/" class="btn btn-outline-secondary btn-lg">Read Blog Post</a></p>
           </div>
-          <div class="col-xs-3 col-sm-4 col-sm-offset-2"><p><img src="assets/images/Open-Source-Logo.png" class="img-responsive" alt="Open Source Logo"></p></div>
+          <div class="col-3 col-sm-6"><p><img src="assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Logo"></p></div>
         </div>
       </div>
     </div>
 
-    <div class="bg grey-blue">
-      <div class="container">
-        <h2 class="project-title text-center"><strong>WordPress Deactivate</strong> User Plugin</h2>
-        <div class="row">
-          <div class="col-sm-6 ">
-            <p>
-              <video autoplay class="img-responsive">
-                <source src="assets/previews/deactive-user-wordpress-plugin.webm" type="video/webm">
-                <source src="assets/previews/deactive-user-wordpress-plugin.mp4" type="video/mp4">
-                <img src="assets/previews/deactive-user-wordpress-plugin.gif" class="img-responsive" alt="Backup Deletion Script">
-              </video>
-            </p>
-          </div>
-          <div class="col-sm-6">
-            <p>A WordPress plugin that allows a user to deactivate their own user account from within the WordPress login area, or via the shortcode.</p>
-
-            <p>To create a front-end page, that immediately deactivates the currently logged in user's account, use the following shortcode. This can be useful when developing a custom front-end.</p>
-
-            <h3>Usage</h3>
-            <p><pre>[jhdup_deactivate_current_user_shortcode]</pre></p>
-            <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd/deactivate-user-plugin" class="btn btn-default btn-lg btn-ghost">View Source</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="bg white">
-      <div class="container">
-        <h2 class="project-title text-center"><strong>Direct</strong> Social Buttons</h2>
-        <div class="row">
-          <div class="col-sm-6 col-sm-push-6">
-            <p><img src="assets/images/intent-social-icons.png" alt="Direct Social Buttons preview" class="img-responsive"/></p>
-          </div>
-          <div class="col-sm-6 col-sm-pull-6">
-            <p>A pure HTML &amp; CSS implementation for allowing users to interact with social networks from your website without any need of loading in heavy JavaScript-based widgets. It provides a choice of many styles to aim to suite your website.
-            </p>
-
-            <p>This project currently supports the following social networks:</p>
-            <ul>
-              <li>Facebook</li>
-              <li>Twitter</li>
-              <li>Google+</li>
-              <li>Pinterest</li>
-            </ul>
-            <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd/direct-social-buttons" class="btn btn-default btn-lg btn-ghost">View Source</a> <a target="_blank" href="https://htmlpreview.github.io/?https://raw.githubusercontent.com/rapidwebltd/Direct-Social-Buttons/master/demo.html" class="btn btn-default btn-lg btn-ghost">View Demo</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="bg grey-blue">
-      <div class="container">
-        <h2 class="project-title text-center"><strong>Backup</strong> Deletion Script</h2>
-        <div class="row">
-          <div class="col-sm-6">
-            <p>
-              <video autoplay class="img-responsive">
-                <source src="assets/previews/backup-deletion-script.webm" type="video/webm">
-                <source src="assets/previews/backup-deletion-script.mp4" type="video/mp4">
-                <img src="assets/previews/backup-deletion-script.gif" class="img-responsive" alt="Backup Deletion Script">
-              </video>
-            </p>
-          </div>
-          <div class="col-sm-6">
-            <p>A shell script designed to identify any backup files present in a git repository, remove them from the repository (via git rm) and to commit and push the changes. It works by identifying backup files based on their filenames ending with an underscore _ following by a string that represents a date.</p>
-
-            <p>The backup script currently checks over the following files: </p>
-            <ul>
-              <li>.php</li>
-              <li>.js</li>
-              <li>.css</li>
-              <li>.htm</li>
-              <li>.html</li>
-            </ul>
-            <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd/backup-deletion" class="btn btn-default btn-lg btn-ghost">View Source</a></p>
-          </div>
-
-        </div>
-      </div>
+    <div class="container">
+      <div id="packages" class="card-columns"></div>
     </div>
 
     <footer class="bg black">
-      <div class="container">
+      <div class="container-fluid">
         <h1 class="text-center">Looking for more Open Source goodness?</h1>
         <br>
-        <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-default btn-lg btn-ghost">View More on GitHub</a></p>
+        <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-outline-secondary btn-lg">View More on GitHub</a></p>
         <p class="text-center">Brought to you by <a target="_blank" href="https://rapidweb.biz" class="footer-link">Rapid Web</a></p>
       </div>
     </footer>
@@ -140,23 +63,54 @@
       (function() {
         var wf = document.createElement('script');
         wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
         wf.type = 'text/javascript';
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
       })(); </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script>
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+      <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+      <script>
       //Scroll to projects
       $(document).ready(function (){
-            $(".btn-projects").click(function (){
-              $('html, body').animate({
-                  scrollTop: $(".project-title").offset().top
-              }, 1000);
-            });
+
+        $(".btn-projects").click(function (){
+          $('html, body').animate({
+            scrollTop: $(".project-title").offset().top
+          }, 1000);
         });
+
+        var repos, packages = [];
+        $.getJSON('https://packagist.org/packages/list.json?vendor=rapidwebltd', function(repos) {
+
+          for (i = 0; i < repos.packageNames.length; i++) {
+            $.getJSON('https://packagist.org/packages/'+repos.packageNames[i]+'.json', function(package) {
+              var package  = package.package;
+              var title = package.name;
+              title = title.replace('rapidwebltd/', '');
+              title = title.replace(/-/g, ' ');
+              packages.push(package);
+              console.log(package);
+
+              $('#packages').append('<div class="card text-center wow fadeInUp" data-wow-delay="1s" data-wow-offset="10"><div class="card-body"><h5 class="card-title text-capitalize">'+title+'</h5><p class="card-text">Downloads: <span class="badge badge-secondary">'+package.downloads.total+'</span></p><p class="card-text text-left">'+package.description+'</p><p class="text-center"><a href="'+package.repository+'" class="btn btn-outline-primary">View Project</a></p></div></div>');
+
+
+            });
+
+          }
+          
+          packages.sort(function(a, b){
+                console.log(a);
+                  a.downloads.total-b.downloads.total
+              });
+         //console.log(packages); 
+
+        });
+      });
     </script>
   </body>
-</html>
+  </html>
