Expanded on 'Our Efforts' section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
         <h2 class="project-title text-center mb-5">Our Open Source Efforts</h2>
         <div class="row">
           <div class="col-9 col-sm-6 pt-5">
-            <p>We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform. There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
+            <p>We have made strides to build a healthy Open Source ecosystem using GitHub to share plugins, libraries, and even knowledge through the use of GitHub platform.</p>
+
+            <p>There are many reasons why commercial developers should embrace open source software, including increasing software security, better code quality, lower running costs and <strong>MUCH</strong> more.</p>
 
             <p>This mini site is powered by GitHub Pages, it aims to provide a dashboard for showing an overview of the activity on our organisation repositories as well as show casing our recent featured projects with an overview of each project featured.</p>
+
+            <p>We also frequently write blog posts regarding our open source tips, projects and other contributions.</p>
 
             <p class="text-center"><a target="_blank" href="https://rapidweb.biz/news/category/open-source-software/" class="btn btn-outline-secondary btn-lg mt-5 mb-5 pl-5 pr-5">Read our Blog Posts</a></p>
           </div>
