--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <p class="text-center"><a target="_blank" href="https://rapidweb.biz/news/category/open-source-software/" class="btn btn-outline-secondary btn-lg mt-5 mb-5 pl-5 pr-5">Read our Blog Posts</a></p>
           </div>
-          <div class="col-3 col-sm-6"><p><img src="assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Logo"></p></div>
+          <div class="col-3 col-sm-6"><p><img src="assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Initiative"></p></div>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
 
     <footer class="bg-dark text-light mt-5 p-5 p-5">
       <div class="container-fluid">
-        <h1 class="text-center">Looking for more Open Source goodness?</h1>
+        <h3 class="text-center">Looking for more Open Source goodness?</h3>
         <br>
         <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-outline-light btn-lg mt-3 mb-3 pl-5 pr-5">View More on GitHub</a></p>
         <p class="text-center">Brought to you by <a target="_blank" href="https://rapidweb.biz" class="footer-link">Rapid Web</a></p>
