Changed btn theme from secondary to dark

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <p>We also frequently write blog posts regarding our open source tips, projects and other contributions.</p>
 
-            <p class="text-center"><a target="_blank" href="https://rapidweb.biz/news/category/open-source-software/" class="btn btn-outline-secondary btn-lg mt-5 mb-5 pl-5 pr-5">Read our Blog Posts</a></p>
+            <p class="text-center"><a target="_blank" href="https://rapidweb.biz/news/category/open-source-software/" class="btn btn-outline-dark btn-lg mt-5 mb-5 pl-5 pr-5">Read our Blog Posts</a></p>
           </div>
           <div class="col-3 col-sm-6"><p><img src="assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Initiative"></p></div>
         </div>
