Margin fixes on buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="text-center pt-5 pb-5"><img src="./assets/images/logo.svg" alt="Rapid Web" class="logo" width="250"> </div>
         <h1 class="text-center pb-5">We <span class="fa fa-heart text-danger"></span> Open Source</h1>
-        <p class="text-center pb-5 m-0"><span href="#" class="btn btn-outline-light btn-lg btn-projects pl-5 pr-5 ml-3 mr-3">Our Projects</span> <a target="_blank" href="//github.com/orgs/rapidwebltd/" class="btn btn-outline-light btn-lg pl-5 pr-5 ml-3 mr-3">GitHub Page</a></p>
+        <p class="text-center pb-5 m-0"><span href="#" class="btn btn-outline-light btn-lg btn-projects pl-5 pr-5 mt-1 mb-1 ml-3 mr-3">Our Projects</span> <a target="_blank" href="//github.com/orgs/rapidwebltd/" class="btn btn-outline-light btn-lg pl-5 pr-5 mt-1 mb-1 ml-3 mr-3">GitHub Page</a></p>
       </div>
     </div>
 
@@ -56,7 +56,7 @@
       <div class="container-fluid">
         <h3 class="text-center">Looking for more Open Source goodness?</h3>
         <br>
-        <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-outline-light btn-lg mt-3 mb-3 pl-5 pr-5">View More on GitHub</a></p>
+        <p class="text-center"><a target="_blank" href="https://github.com/rapidwebltd" class="btn btn-outline-light btn-lg pl-5 pr-5">View More on GitHub</a></p>
         <p class="text-center">Brought to you by <a target="_blank" href="https://rapidweb.biz" class="footer-link text-info">Rapid Web</a></p>
       </div>
     </footer>
