--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
   <meta name="description" content="Rapid Web have made strides to build a healthy Open Source ecosystem using GitHub in order to share plugins, libraries and even knowledge through the use of GitHub platform." />
   <meta name="keywords" content="Open Source, Rapid Web, Open Web, Open Source Wordpress Plugins, Open Web Software, Free Web Software, Free Open Source Software" />
   <meta name="author" content="Rapid Web Ltd">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
+  <link rel="stylesheet" href="./public/css/style.min.css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>.wow {visibility:hidden;}</style>
   </head>
   <body>
     <div class="bg-dark text-light">
@@ -43,7 +40,7 @@
 
             <p class="text-center"><a target="_blank" href="https://rapidweb.biz/news/category/open-source-software/" class="btn btn-outline-dark btn-lg mt-5 mb-5 pl-5 pr-5">Read our Blog Posts</a></p>
           </div>
-          <div class="col-3 col-sm-6"><p><img src="assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Initiative"></p></div>
+          <div class="col-3 col-sm-6"><p><img src="./assets/images/Open-Source-Logo.png" class="img-fluid" alt="Open Source Initiative"></p></div>
         </div>
       </div>
     </div>
@@ -61,61 +58,6 @@
         <p class="text-center">Brought to you by <a target="_blank" href="https://rapidweb.biz" class="footer-link text-info">Rapid Web</a></p>
       </div>
     </footer>
-    <script type="text/javascript">
-      //Web font load
-      WebFontConfig = {
-        google: { families: [ 'Open+Sans::latin' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); </script>
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-      <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-      <script>
-      //Scroll to projects
-      $(document).ready(function (){
-        new WOW().init();
-        $(".btn-projects").click(function (){
-          $('html, body').animate({
-            scrollTop: $(".project-title").offset().top
-          }, 1000);
-        });
-
-        var repos, packages = [];
-        $.getJSON('https://packagist.org/packages/list.json?vendor=rapidwebltd', function(repos) {
-
-          for (i = 0; i < repos.packageNames.length; i++) {
-            $.getJSON('https://packagist.org/packages/'+repos.packageNames[i]+'.json', function(package) {
-              var package  = package.package;
-              var title = package.name;
-              title = title.replace('rapidwebltd/', '');
-              title = title.replace(/-/g, ' ');
-              packages.push(package);
-              console.log(package);
-
-              $('#packages').append('<div class="card text-center wow fadeIn" data-wow-delay="0.5s" data-wow-offset="5"><div class="card-body"><h5 class="card-title text-capitalize">'+title+'</h5><p class="card-text">Downloads: <span class="badge badge-info">'+package.downloads.total+'</span></p><p class="card-text text-left">'+package.description+'</p><p class="text-center m-0"><a href="'+package.repository+'" class="btn btn-outline-info btn-lg btn-block">View Project</a></p></div></div>');
-
-            });
-
-          }
-
-          packages.sort(function(a, b){
-                console.log(a);
-                  a.downloads.total-b.downloads.total
-              });
-         //console.log(packages); 
-
-        });
-      });
-    </script>
+    <script src="./public/js/scripts.min.js"></script>
   </body>
 </html>
