--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
   <meta name="description" content="Rapid Web have made strides to build a healthy Open Source ecosystem using GitHub in order to share plugins, libraries and even knowledge through the use of GitHub platform." />
   <meta name="keywords" content="Open Source, Rapid Web, Open Web, Open Source Wordpress Plugins, Open Web Software, Free Web Software, Free Open Source Software" />
   <meta name="author" content="Rapid Web Ltd">
+  <link rel="apple-touch-icon" sizes="180x180" href="./public/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/img/favicon-16x16.png">
+  <link rel="manifest" href="./manifest.json">
+  <meta name="apple-mobile-web-app-title" content="Rapid Web">
+  <meta name="application-name" content="Rapid Web">
+  <meta name="theme-color" content="#283033">
   <link rel="stylesheet" href="./public/css/style.min.css"><!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
